--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ body {
   width: 100%;
   height: 93vh;
   position: relative;
-  background: url("../img/background.jpg") no-repeat center center/cover;
+  background: url("background.jpg") no-repeat center center/cover;
 }
 
 .showcase::after {
